[package]
name = "libntirpc-sys"
version = "0.1.0"
edition = "2021"
authors = ["Ming Chen <v.mingchen@gmail.com>"]
license = "BSD-3-Clause"
description = "Low-level bindings for the libntirpc library."
repository = "https://github.com/vmingchen/libntirpc-sys"
readme = "README.md"
keywords = ["xdr", "rpc", "tirpc", "ntirpc"]

[dependencies]

[build-dependencies]
bindgen = "0.70"